[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.3.2", 
    "pandas>=2.3.2", 
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = ["pytest", "black"]